--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson | Linktree</title>
+    <title>danidanz</title>
     <!-- Favicon -->
-    <link rel="icon" href="https://avatars0.githubusercontent.com/u/43749971" type="image/x-icon" />
+    <link rel="icon" href="https://avatars0.githubusercontent.com/u/5567452" type="image/x-icon" />
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <!-- Core theme CSS -->
@@ -22,50 +22,41 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+      <img src="https://avatars0.githubusercontent.com/u/5567452" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
       <div class="popup">
         <div class="popup-photo">
-          <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-            <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+          <a href="https://avatars0.githubusercontent.com/u/5567452" target="_blank">
+            <img src="https://avatars0.githubusercontent.com/u/5567452" alt="Profile Picture">
           </a>
         </div>
         <div class="popup-quote">
-          But... the sensation that I've lost something lingers for a longtime after I wake up.
+          Are you gettin' something out of this all encompassing trip?
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
     </div>
 
     <div id="userName">
-      @johnggli
+      @danidanz
     </div>
 
     <div id="links">
-      <a class="link" href="https://github.com/johnggli" target="_blank">
+      <a class="link" href="https://github.com/danidanz" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <a class="link" href="https://www.linkedin.com/in/johnggli" target="_blank">
-        <i class="fab fa-linkedin">&nbsp;</i>Linkedin
+      <a class="link" href="https://www.facebook.com/danidanz" target="_blank">
+        <i class="fab fa-facebook">&nbsp;</i>Mastodon
       </a>
-      <a class="link" href="https://www.facebook.com/johnggli" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Facebook
-      </a>
-      <a class="link" href="https://www.instagram.com/johnggli" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://twitter.com/johnggli" target="_blank">
+      <a class="link" href="https://twitter.com/danidanz" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
-      <a class="link" href="https://myanimelist.net/profile/johnggli" target="_blank">
-        <i class="fa fa-play-circle">&nbsp;</i>MyAnimeList
+      <a class="link" href="https://www.instagram.com/danidanz" target="_blank">
+        <i class="fab fa-instagram">&nbsp;</i>Instagram
       </a>
     </div>
 
-    <div id="hashtag">
-      #BeHappy❤
-    </div>
   </body>
 </html>
