Update Mastodon link for danidanz.dev

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <a class="link" href="https://github.com/danidanz" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
       </a>
-      <a class="link" href="https://www.facebook.com/danidanz" target="_blank">
-        <i class="fab fa-facebook">&nbsp;</i>Mastodon
+      <a class="link" href="https://hostux.social/@danidanz" rel="me" target="_blank">
+        <i class="fab fa-mastodon">&nbsp;</i>Mastodon
       </a>
       <a class="link" href="https://twitter.com/danidanz" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
