--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>danidanz</title>
+    <title>danz.cloud</title>
     <!-- Favicon -->
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/5567452" type="image/x-icon" />
     <!-- Font Awesome icons -->
@@ -47,14 +47,8 @@
       <a class="link" href="https://hostux.social/@danidanz" rel="me" target="_blank">
         <i class="fab fa-mastodon">&nbsp;</i>Mastodon
       </a>
-      <a class="link" href="https://twitter.com/danidanz" target="_blank">
-        <i class="fab fa-twitter">&nbsp;</i>Twitter
-      </a>
-      <a class="link" href="https://www.instagram.com/danidanz" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
-      </a>
-      <a class="link" href="https://github.com/danidanz" target="_blank">
-        <i class="fab fa-github">&nbsp;</i>Github
+      <a class="link" href="https://youtube.com/@danzcloud" target="_blank">
+        <i class="fab fa-youtube">&nbsp;</i>Youtube
       </a>
     </div>
 
