Change the Youtube handle

--- a/index.html
+++ b/index.html
@@ -40,14 +40,11 @@
     </div>
 
     <div id="userName">
-      @danidanz
+      @danidanzcloud
     </div>
 
     <div id="links">
-      <a class="link" href="https://hostux.social/@danidanz" rel="me" target="_blank">
-        <i class="fab fa-mastodon">&nbsp;</i>Mastodon
-      </a>
-      <a class="link" href="https://youtube.com/@danzcloud" target="_blank">
+      <a class="link" href="https://youtube.com/@danidanzcloud" target="_blank">
         <i class="fab fa-youtube">&nbsp;</i>Youtube
       </a>
     </div>
