update the fontawesome

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Favicon -->
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/5567452" type="image/x-icon" />
     <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v.6.6.0/css/all.css">
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
@@ -50,8 +50,8 @@
       <a class="link" href="https://twitter.com/danidanz" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
-      <a class="link" href="https://www.instagram.com/danidanz" target="_blank">
-        <i class="fab fa-instagram">&nbsp;</i>Instagram
+      <a class="link" href="https://threads.net/danidanz" target="_blank">
+        <i class="fab fa-threads">&nbsp;</i>Threads
       </a>
       <a class="link" href="https://github.com/danidanz" target="_blank">
         <i class="fab fa-github">&nbsp;</i>Github
