fix typo on fontawesome css version

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Favicon -->
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/5567452" type="image/x-icon" />
     <!-- Font Awesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v.6.6.0/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.6.0/css/all.css">
     <!-- Core theme CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
